Security.config fixed